@@ -1,0 +1,35 @@
+## Copyright (C) 2018 John Donoghue <john.donoghue@ieee.org>
+##
+## This program is free software; you can redistribute it and/or modify it under
+## the terms of the GNU General Public License as published by the Free Software
+## Foundation; either version 3 of the License, or (at your option) any later
+## version.
+##
+## This program is distributed in the hope that it will be useful, but WITHOUT
+## ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+## FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+## details.
+##
+## You should have received a copy of the GNU General Public License along with
+## this program; if not, see <http://www.gnu.org/licenses/>.
+
+## -*- texinfo -*-
+## @deftypefn {Function File} {@var{list} = } seriallist ()
+## Returns a list of all serial ports detected in the system.
+##
+## @var{list} is a string cell array of serial ports names detected
+## in the system.
+##
+## @seealso{instrhwinfo("serial")}
+## @end deftypefn
+
+function out = seriallist ()
+
+  if nargin != 0
+    print_usage ();
+  endif
+
+  out = instrhwinfo("serial");
+endfunction
+
+%!assert(seriallist, instrhwinfo("serial"))
